--- a/default.env
+++ b/default.env
@@ -1,5 +1,5 @@
 # Client choice: See https://eth-docker.net/docs/Usage/ClientSetup for available options
-COMPOSE_FILE=teku-base.yml:besu.yml:deposit-cli.yml
+COMPOSE_FILE=teku.yml:besu.yml:deposit-cli.yml
 # Set the ETH address that priority fees and MEV rewards should be sent to
 FEE_RECIPIENT=
 # Decide whether to connect the CL to Flashbots MEV boost. Set MEV_BOOST to "true" for MEV
