--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -34,6 +34,12 @@ services:
       - 0.0.0.0
       - --keymanager.port
       - ${KEY_API_PORT:-7500}
+      - --metrics
+      - true
+      - --metrics.port
+      - "8009"
+      - --metrics.address
+      - 0.0.0.0
       - --graffiti
       - ${GRAFFITI}
       - --logLevel
