--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -35,7 +35,7 @@ services:
       - --keymanager.port
       - ${KEY_API_PORT:-7500}
       - --metrics
-      - true
+      - "true"
       - --metrics.port
       - "8009"
       - --metrics.address
