Rework ethd version

--- a/lodestar.yml
+++ b/lodestar.yml
@@ -141,32 +141,25 @@ services:
   validator-exit:
     profiles: ["tools"]
     restart: "no"
-#    image: lodestar:local
-    image: alpine:latest
-#    user: lsvalidator
-    user: 10000:10000
+    image: lodestar:local
+    user: lsvalidator
     volumes:
       - lsvalidator-data:/var/lib/lodestar/validators
       - /etc/localtime:/etc/localtime:ro
-    entrypoint: ["/bin/sh","-c"]
-    command:
-      - |
-        echo "Lodestar v1.0 has removed voluntary exit functionality"
-        echo "Please follow https://github.com/ChainSafe/lodestar/issues/4472 for updates"
-#    entrypoint:
-#      - node
-#      - --max-old-space-size=4096
-#      - /usr/app/node_modules/.bin/lodestar
-#      - validator
-#      - voluntary-exit
-#      - --dataDir
-#      - /var/lib/lodestar/validators
-#      - --server
-#      - http://consensus:5052
-#      -  --logLevel
-#      - ${LOG_LEVEL}
-#      - --network
-#      - ${NETWORK}
+    entrypoint:
+      - node
+      - --max-old-space-size=4096
+      - /usr/app/node_modules/.bin/lodestar
+      - validator
+      - voluntary-exit
+      - --dataDir
+      - /var/lib/lodestar/validators
+      - --server
+      - http://consensus:5052
+      -  --logLevel
+      - ${LOG_LEVEL}
+      - --network
+      - ${NETWORK}
 
   validator-keys:
     profiles: ["tools"]
