--- a/prysm-cl-only.yml
+++ b/prysm-cl-only.yml
@@ -72,6 +72,7 @@ services:
       - "8008"
       - --suggested-fee-recipient
       - ${FEE_RECIPIENT}
+    command: ${CL_EXTRAS}
     labels:
       - traefik.enable=true
       - traefik.http.routers.cl.entrypoints=websecure
