--- a/prysm.yml
+++ b/prysm.yml
@@ -72,6 +72,7 @@ services:
       - "8008"
       - --suggested-fee-recipient
       - ${FEE_RECIPIENT}
+    command: ${CL_EXTRAS}
 
   validator:
     restart: "unless-stopped"
@@ -119,6 +120,7 @@ services:
       # If you chose not to store the wallet password during import, comment out the two following lines
       - --wallet-password-file
       - /var/lib/prysm/password.txt
+    command: ${VC_EXTRAS}
     depends_on:
       - consensus
     labels:
