--- a/teku.yml
+++ b/teku.yml
@@ -73,6 +73,7 @@ services:
       - --validator-api-keystore-password-file=/var/lib/teku/teku-keyapi.password
       - --validators-proposer-default-fee-recipient=${FEE_RECIPIENT}
       - --validators-keystore-locking-enabled=false
+    command: ${CL_EXTRAS}
 
   validator-import:
     profiles: ["tools"]
