--- a/lighthouse.yml
+++ b/lighthouse.yml
@@ -71,6 +71,7 @@ services:
       - --validator-monitor-auto
       - --suggested-fee-recipient
       - ${FEE_RECIPIENT}
+    command: ${CL_EXTRAS}
 
   validator:
     restart: "unless-stopped"
@@ -113,6 +114,7 @@ services:
       - --unencrypted-http-transport
       - --suggested-fee-recipient
       - ${FEE_RECIPIENT}
+    command: ${VC_EXTRAS}
     depends_on:
       - consensus
 
