--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -48,6 +48,7 @@ services:
       - ${NETWORK}
       - --suggestedFeeRecipient
       - ${FEE_RECIPIENT}
+    command: ${VC_EXTRAS}
 
   validator-import:
     profiles: ["tools"]
