--- a/lodestar.yml
+++ b/lodestar.yml
@@ -65,6 +65,7 @@ services:
       - ${NETWORK}
       - --suggestedFeeRecipient
       - ${FEE_RECIPIENT}
+    command: ${CL_EXTRAS}
 
   validator:
     restart: "unless-stopped"
@@ -108,6 +109,7 @@ services:
       - ${NETWORK}
       - --suggestedFeeRecipient
       - ${FEE_RECIPIENT}
+    command: ${VC_EXTRAS}
 
   validator-import:
     profiles: ["tools"]
