--- a/prysm-vc-only.yml
+++ b/prysm-vc-only.yml
@@ -59,6 +59,7 @@ services:
       # If you chose not to store the wallet password during import, comment out the two following lines
       - --wallet-password-file
       - /var/lib/prysm/password.txt
+    command: ${VC_EXTRAS}
     labels:
       - traefik.enable=true
       - traefik.http.routers.prysm.entrypoints=web,websecure
