--- a/teku-vc-only.yml
+++ b/teku-vc-only.yml
@@ -42,6 +42,7 @@ services:
       - --validator-api-keystore-password-file=/var/lib/teku/teku-keyapi.password
       - --validators-proposer-default-fee-recipient=${FEE_RECIPIENT}
       - --validators-keystore-locking-enabled=false
+    command: ${VC_EXTRAS}
 
   validator-import:
     profiles: ["tools"]
