--- a/prometheus/json.yml
+++ b/prometheus/json.yml
@@ -1,4 +1,6 @@
-metrics:
-- name: ethusd
-  path: $.ethereum.usd
-  help: Ethereum (ETH) price in USD
+modules:
+  default:
+    metrics:
+    - name: ethusd
+      path: "{ .ethereum.usd }"
+      help: Ethereum (ETH) price in USD
