Add a few dashboards

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -8,5 +8,6 @@ RUN mkdir -p /etc/grafana/provisioning/datasources/
 COPY ./dashboard.yml /etc/grafana/provisioning/dashboards/
 COPY ./datasource.yml /etc/grafana/provisioning/datasources/
 COPY ./provision-dashboards.sh /usr/local/bin/
+COPY ./nethermind_dashboard.json /tmp/
 
 ENTRYPOINT [ "/run.sh" ]
