--- a/grafana-localhost.yml
+++ b/grafana-localhost.yml
@@ -3,6 +3,6 @@ services:
   grafana:
     ports:
       - 127.0.0.1:${GRAFANA_PORT}:${GRAFANA_PORT}/tcp
-#  prometheus:
-#    ports:
-#      - 9090:9090/tcp
+  prometheus:
+    ports:
+      - 127.0.0.1:9090:9090/tcp
