--- a/besu.yml
+++ b/besu.yml
@@ -18,9 +18,7 @@ services:
         - BUILD_TARGET=${BESU_SRC_BUILD_TARGET}
         - DOCKER_TAG=${BESU_DOCKER_TAG}
     image: besu:local
-# Root so a chown can happen for the secret, then gosu into besu. This can become besu again
-# after merge
-    user: root
+    user: besu
     environment:
       - JAVA_OPTS=-Xmx4g
       - JWT_SECRET=${JWT_SECRET}
