--- a/geth.yml
+++ b/geth.yml
@@ -18,9 +18,7 @@ services:
         - DOCKER_TAG=${GETH_DOCKER_TAG}
     stop_grace_period: 3m
     image: geth:local
-# Root so a chown can happen for the secret, then su-exec into geth. This can become geth again
-# after merge
-    user: root
+    user: geth
     environment:
       - JWT_SECRET=${JWT_SECRET}
       - OVERRIDE_TTD=${OVERRIDE_TTD}
