--- a/nethermind.yml
+++ b/nethermind.yml
@@ -19,9 +19,7 @@ services:
         - BUILD_TARGET=${NM_SRC_BUILD_TARGET}
         - DOCKER_TAG=${NM_DOCKER_TAG}
     image: nethermind:local
-# Root so a chown can happen for the secret, then gosu into nethermind. This can become nethermind again
-# after merge
-    user: root
+    user: nethermind
     environment:
       - JWT_SECRET=${JWT_SECRET}
       - OVERRIDE_TTD=${OVERRIDE_TTD}
