Adjustable heap for Teku and Besu

--- a/default.env
+++ b/default.env
@@ -95,6 +95,12 @@ CL_EXTRAS=
 # Additional parameters for the validator client.
 VC_EXTRAS=
 
+# Heap for Besu and Teku, both written in Java. Sets JAVA_OPTS to this
+# value, for example BESU_HEAP=-Xmx8g to set it to 8g. If left empty, the
+# defaults in besu.yml and teku.yml are used.
+BESU_HEAP=
+TEKU_HEAP=
+
 # If you want debug logs, set this to debug instead of info
 LOG_LEVEL=info
 
