--- a/besu.yml
+++ b/besu.yml
@@ -20,7 +20,7 @@ services:
     image: besu:local
     user: besu
     environment:
-      - JAVA_OPTS=-Xmx4g
+      - JAVA_OPTS=${BESU_HEAP:--Xmx5g}
       - JWT_SECRET=${JWT_SECRET}
       - OVERRIDE_TTD=${OVERRIDE_TTD}
     volumes:
