Quiet Nethermind push gateway messages

--- a/nethermind.yml
+++ b/nethermind.yml
@@ -67,6 +67,8 @@ services:
       - "true"
       - --Metrics.ExposePort
       - "6060"
+      - --Metrics.IntervalSeconds
+      - "999999"
       - --config
       - ${NETWORK}
 # Potentially unsafe to auto-prune
