Add Nimbus validator client only

--- a/default.env
+++ b/default.env
@@ -136,7 +136,7 @@ MEV_DOCKERFILE=Dockerfile.binary
 
 # Nimbus
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
-NIM_SRC_BUILD_TARGET=unstable
+NIM_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 NIM_DOCKER_TAG=multiarch-latest
 NIM_DOCKERFILE=Dockerfile.binary
 
@@ -173,8 +173,8 @@ BESU_DOCKERFILE=Dockerfile.binary
 
 # Erigon
 # SRC build target can be a tag or a branch
-ERIGON_SRC_BUILD_TARGET=devel
-ERIGON_DOCKER_TAG=alpha
+ERIGON_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+ERIGON_DOCKER_TAG=stable
 ERIGON_DOCKERFILE=Dockerfile.binary
 
 # Nethermind
