Besu defaults to openjdk-latest and uses soft max heap

--- a/default.env
+++ b/default.env
@@ -168,7 +168,7 @@ LS_DOCKERFILE=Dockerfile.binary
 # Besu
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 BESU_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
-BESU_DOCKER_TAG=latest
+BESU_DOCKER_TAG=latest-openjdk-latest
 BESU_DOCKERFILE=Dockerfile.binary
 
 # Erigon
