--- a/teku/Dockerfile.source
+++ b/teku/Dockerfile.source
@@ -1,5 +1,5 @@
 # Build Teku in a stock Ubuntu container
-FROM eclipse-temurin:17-jdk-focal as builder
+FROM eclipse-temurin:17-jdk-jammy as builder
 
 # This is here to avoid build-time complaints
 ARG DOCKER_TAG
@@ -12,7 +12,7 @@ WORKDIR /usr/src
 RUN bash -c "git clone https://github.com/ConsenSys/teku.git && cd teku && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && ./gradlew installDist"
 
 # Pull all binaries into a second stage deploy Ubuntu container
-FROM eclipse-temurin:17-focal
+FROM eclipse-temurin:17-jammy
 
 ARG USER=teku
 ARG UID=10002
