Explicit metrics addr for geth

--- a/geth.yml
+++ b/geth.yml
@@ -61,6 +61,8 @@ services:
       - --${NETWORK}
       - --metrics
       - --metrics.expensive
+      - --metrics.addr
+      - 0.0.0.0
       - --pprof
       - --pprof.addr
       - 0.0.0.0
