Fix source targets to work with docker compose

--- a/default.env
+++ b/default.env
@@ -130,31 +130,31 @@ NIM_DOCKERFILE=Dockerfile.source
 
 # Teku
 # SRC build target can be a tag or a branch
-TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+TEKU_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 TEKU_DOCKER_TAG=latest-chiado
 TEKU_DOCKERFILE=Dockerfile.binary
 
 # Lighthouse
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
-LH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+LH_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 LH_DOCKER_TAG=latest-chiado
 LH_DOCKERFILE=Dockerfile.binary
 
 # Prysm
 # SRC build target can be a tag or a branch
-PRYSM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+PRYSM_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 PRYSM_DOCKER_TAG=latest-chiado
 PRYSM_DOCKERFILE=Dockerfile.binary
 
 # Lodestar
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
-LS_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+LS_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 LS_DOCKER_TAG=latest-chiado
 LS_DOCKERFILE=Dockerfile.binary
 
 # Besu
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
-BESU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+BESU_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 BESU_DOCKER_TAG=latest
 BESU_DOCKERFILE=Dockerfile.binary
 
@@ -166,13 +166,13 @@ ERIGON_DOCKERFILE=Dockerfile.binary
 
 # Nethermind
 # SRC build target can be a tag or a branch
-NM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+NM_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 NM_DOCKER_TAG=latest-chiado
 NM_DOCKERFILE=Dockerfile.binary
 
 # Go-Ethereum aka Geth
 # SRC build target can be a tag or a branch
-GETH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+GETH_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 GETH_DOCKER_TAG=stable
 GETH_DOCKERFILE=Dockerfile.binary
 
@@ -184,9 +184,9 @@ AKULA_DOCKERFILE=Dockerfile.source
 
 # staking-deposit-cli
 # SRC build target can be a tag or a branch
-DEPCLI_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+DEPCLI_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 # Does not (yet?) exist on Docker hub
 DEPCLI_DOCKER_TAG=nonesuch
 
 # For the Node Dashboard, define a regex of mount points to ignore for the diskspace check.
-NODE_EXPORTER_IGNORE_MOUNT_REGEX=^/(dev|proc|sys|run|var/lib/docker/.+)($|/)
+NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
