--- a/erigon.yml
+++ b/erigon.yml
@@ -77,8 +77,8 @@ services:
       - --maxpeers
       - ${EL_MAX_PEER_COUNT:-100}
       # Reduce memory use so it fits into 16 GiB machines
-#      - --batchSize
-#      - 64m
+      - --batchSize
+      - 128m
     command: ${EL_EXTRAS}
 volumes:
   erigon-el-data:
