--- a/erigon.yml
+++ b/erigon.yml
@@ -76,9 +76,9 @@ services:
       - /var/lib/erigon/ee-secret/jwtsecret
       - --maxpeers
       - ${EL_MAX_PEER_COUNT:-100}
-      # Reduce memory use so it fits into 16 GiB machines
+      # Memory use reduction, might not actually have an impact on 1/16
       - --batchSize
-      - 64m
+      - 128m
     command: ${EL_EXTRAS}
 volumes:
   erigon-el-data:
