--- a/heco.yml
+++ b/heco.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 services:
   heco:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     build:
       context: ./geth
       dockerfile: Dockerfile.heco
