--- a/opera.yml
+++ b/opera.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 services:
   opera:
-    restart: "${RESTART}"
+    restart: "unless-stopped"
     build:
       context: ./opera
       dockerfile: ${OPERA_DOCKERFILE}
