Less housekeeping for cadvisor

--- a/grafana.yml
+++ b/grafana.yml
@@ -104,6 +104,7 @@ services:
       - /var/lib/docker:/var/lib/docker:ro
     command:
       - --docker_only
+      - --housekeeping_interval=30s
     <<: *logging
 
   promtail:
