--- a/erigon.yml
+++ b/erigon.yml
@@ -77,12 +77,12 @@ services:
       - /var/lib/erigon/ee-secret/jwtsecret
       - --maxpeers
       - ${EL_MAX_PEER_COUNT:-100}
-      # To use with recordsize 16k in ZFS
+      # To assist with recordsize 16k in ZFS
       - --db.pagesize
       - 16K
-      # Memory use reduction, might not actually have an impact
-      - --batchSize
-      - 64m
+      # Memory use reduction. Not needed with 32G and does not help with 16G
+      #- --batchSize
+      #- 64m
     command: ${EL_EXTRAS}
 volumes:
   erigon-el-data:
