--- a/loki/loki.yml
+++ b/loki/loki.yml
@@ -16,6 +16,14 @@ common:
     kvstore:
       store: inmemory
 
+compactor:
+  working_directory: /tmp/loki/boltdb-shipper-compactor
+  shared_store: filesystem
+  compaction_interval: 10m
+  retention_enabled: true
+  retention_delete_delay: 2h
+  retention_delete_worker_count: 150
+
 schema_config:
   configs:
     - from: 2020-10-24
@@ -25,3 +33,6 @@ schema_config:
       index:
         prefix: index_
         period: 24h
+
+limits_config:
+  retention_period: 30d
