Teku exit with managed keys

--- a/teku.yml
+++ b/teku.yml
@@ -101,6 +101,7 @@ services:
       - --beacon-node-api-endpoint=http://consensus:5052
       - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
       - --validator-keys=/var/lib/teku/validator/key-manager/local:/var/lib/teku/validator/key-manager/local-passwords
+      - --include-keymanager-keys=true
 
   validator-keys:
     profiles: ["tools"]
