--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -15,6 +15,7 @@ services:
     environment:
       - MEV_BOOST=${MEV_BOOST}
       - DOPPELGANGER=${DOPPELGANGER}
+      - VC_EXTRAS=${VC_EXTRAS:-}
     volumes:
       - lsvalidator-data:/var/lib/lodestar/validators
       - /etc/localtime:/etc/localtime:ro
@@ -48,7 +49,6 @@ services:
       - ${NETWORK}
       - --suggestedFeeRecipient
       - ${FEE_RECIPIENT}
-    command: ${VC_EXTRAS}
 
   validator-import:
     profiles: ["tools"]
