--- a/teku-vc-only.yml
+++ b/teku-vc-only.yml
@@ -24,6 +24,7 @@ services:
     environment:
       - JAVA_OPTS=${TEKU_HEAP:--XX:SoftMaxHeapSize=2g -Xmx5g}
       - MEV_BOOST=${MEV_BOOST}
+      - VC_EXTRAS=${VC_EXTRAS:-}
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -45,7 +46,6 @@ services:
       - --validator-api-keystore-password-file=/var/lib/teku/teku-keyapi.password
       - --validators-proposer-default-fee-recipient=${FEE_RECIPIENT}
       - --validators-keystore-locking-enabled=false
-    command: ${VC_EXTRAS}
 
   validator-import:
     profiles: ["tools"]
