--- a/besu.yml
+++ b/besu.yml
@@ -74,6 +74,7 @@ services:
       - --metrics-port
       - "6060"
       - --data-storage-format=BONSAI
+      - --Xbonsai-use-snapshots=true
 #      - --sync-mode=X_CHECKPOINT
       - --sync-mode=X_SNAP
 volumes:
