--- a/nethermind/Dockerfile.source
+++ b/nethermind/Dockerfile.source
@@ -15,7 +15,7 @@ FROM ghcr.io/tomwright/dasel:latest as dasel
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install libsnappy-dev libc6-dev libc6 ca-certificates gosu tzdata && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install libsnappy-dev libc6-dev libc6 ca-certificates gosu tzdata wget && rm -rf /var/lib/apt/lists/*
 
 ARG USER=nethermind
 ARG UID=10001
