Support MEV minimum bid

--- a/mev-boost.yml
+++ b/mev-boost.yml
@@ -23,4 +23,8 @@ services:
       - -relay-check
       - -relays
       - ${MEV_RELAYS}
+      - -min-bid
+      - ${MEV_MIN_BID:-0}
+      - -loglevel
+      - ${LOG_LEVEL}
     <<: *logging
