Polygon node exporter env

--- a/polygon-mainnet.env
+++ b/polygon-mainnet.env
@@ -51,3 +51,5 @@ RESTART=unless-stopped
 
 # Unused but here for reference
 BOR_START=https://raw.githubusercontent.com/maticnetwork/launch/master/mainnet-v1/sentry/sentry/bor/start.sh
+# For the Node Dashboard, define a regex of mount points to ignore for the diskspace check.
+NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
